--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     </head>
     <body>
         <h1>Hello, World!</h1>
+
+        <ol>
+            <li>Apple</li>
+            <li>Grapes</li>
+            <li>Mango</li>
+        </ol>
     </body>
 </html>
